# multi-agent-for-customer-support

./: LICENSE  README.md  create_memory.py  main.py  pyproject.toml
agentcore_tools/: invoke.py
agents/: faq_agent.py  order_status.py  prompt_templates.py  return_agent.py  supervisor.py  voc_agent.py
config/: bedrock_config.py  orders.csv
docs/: Product_faq.md  Product_intro.md  Product_scenario.md  coffee_machine_faq.md  fridge_faq.md
models/: context.py
tools/: agentcore_memory.py  common_tools.py  logger_config.py  memory_hook.py
